
--Fixed drag-to-place glitch (stubborn tile that won't change) if player moves
  to shift the screen during the drag (thanks Colorfusion).

--Fixed mouse hover visual glitch in whole map saved images (thanks
  Colorfusion).

--Added a back button on object/tool picker grid screens (to leave picker
  without picking anything).  The lack of a way to go back was confusing to
  new users.





Version 24   Live Server Fixes

--Reduced starting bounty (when no crimes have been commited yet) down from
  500 to 100 (thanks Joshua Collins).

--Reduced cost of doorstop from $1200 down to $200 (thanks Joshual Collins and
  Colorfusion).

 



Version 24b   2013-November-15 
OSX-only fix (for 10.9 users)

--Fixed so that working directory is set correctly in 10.9 Mavericks
  (otherwise, game launches full screen and then crashes).





Version 24    2013-November-14

--Fixed an obscure bug in frame timing caused by a sudden daylight savings time
  update while the game is running (next frame tries to wait an hour before
  being drawn).

--Fixed a bug that allowed the placement of multiple wives, kids, or vaults if
  you happen to be in the process of picking up one of these objects right when
  you are kicked out of editing your house for 5+ minutes of inactivity.
  Multiple vaults would result in your house being rejected by the server, but
  multiple wives or kids would end up being accepted by the server. (thanks 
  Joshua Collins and Ben Foster).

--Fixed potential death if user left house to view tapes immediately after
  backing out of a self-test, before the end_self_test was properly executed
  on the server.  Now Tapes button is hidden if there are pending background
  requests (thanks Joshua Collins).

--Pressing the + key in house edit mode and tape playback mode will now save
  the entire house map as a TGA image in the mapShots folder.

--Auctions button hidden if your house needs fixing (thanks Ben Foster).
